# projectional

./: .bazelignore  .bazelrc  .envrc.example  .gitignore  BUILD  BUILD.bazel  CHANGELOG.md  Cargo.toml  Justfile  Makefile  WORKSPACE.bazel  cargo.bzl  coarse.bzl  flake.nix  garnix.yaml  package-lock.json  rules_local.bzl
.buildkite/: pipeline.yml
dir-test/: BUILD.bazel
dir-test/empty/: BUILD.bazel
dir-test/runfiles-order/: BUILD.bazel
my-app/: .gitignore  BUILD  BUILD.bazel  Cargo.toml  Justfile  index.html  launch_editor.sh  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
my-app/js/: main.tsx
my-app/src/: lib.rs
projectional/: BUILD  README.md  package-lock.json  package.json
projectional/media/: main.js
projectional/src/: extension.ts
puddlejumper/: BUILD  BUILD.bazel  Cargo.toml  Justfile
puddlejumper/src/: context.rs  diff.rs  levenshtein.rs  lib.rs  main.rs  node.rs  parser.rs  patch.rs  puddlejumper.rs  text_diff.rs  tree_diff.rs
puddlejumper/src/node/: printer.rs
puddlejumper/src/puddlejumper/: node.rs  parser.rs
puddlejumper/src/puddlejumper/node/: extract_priorities.rs  printer.rs
rules_hybrid/: README.md  defs.bzl
rules_hybrid/test/build-order/: BUILD
rules_hybrid/test/empty/: BUILD
rules_hybrid/test/ibazel/: BUILD
rules_hybrid/test/workspace_symlinks/: .gitignore  BUILD  foo.txt
rules_hybrid/test/write_symlinks/: BUILD  foo.txt  some_dir
rules_hybrid/test/write_symlinks/some_other_dir/: README.md  asdf.txt
rules_local/: README.md  defs.bzl
rules_local/test/build-order/: BUILD  BUILD.bazel
rules_local/test/empty/: BUILD  BUILD.bazel
rules_local/test/ibazel/: BUILD
tree-sitter-puddlejumper/: .gitignore  BUILD  BUILD.bazel  Cargo.toml  Justfile  binding.gyp  example-file  grammar.js  package-lock.json  package.json  test.pj
tree-sitter-puddlejumper/bindings/node/: binding.cc  index.js
tree-sitter-puddlejumper/bindings/rust/: build.rs  lib.rs  scanner.rs
tree-sitter-puddlejumper/src/: grammar.json  node-types.json  parser.c  scanner.cc
tree-sitter-puddlejumper/test/corpus/: binding.txt  block.txt  block_binding.txt  block_then_inline.txt  flat.txt  foo.txt  inline_binding.txt  nested.txt  reference.txt  tree.txt
