[workspace]

members = [
    "tree-sitter-puddlejumper",
    "puddlejumper",
    "my-app",
]


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true