load("//:coarse.bzl", "dir_run", "dir_step")

dir_step(
    name = "a",
    outs = [
        "$DIR_ROOT/foo",
    ],
    cmd = "mkdir -p $DIR_ROOT/foo && echo a > $DIR_ROOT/foo/a",
    path = "a",
)

dir_step(
    name = "b",
    outs = [
        "$DIR_ROOT/foo",
    ],
    cmd = "mkdir -p $DIR_ROOT/foo && echo b > $DIR_ROOT/foo/b && echo b > $DIR_ROOT/foo/a",
    path = "b",
    deps = [":a"],
)

dir_step(
    name = "c",
    outs = [
        "$DIR_ROOT/foo",
    ],
    cmd = "mkdir -p $DIR_ROOT/foo && echo c > $DIR_ROOT/foo/c",
    path = "c",
    deps = [
        ":b_prime",
    ] + [
        ":b",
    ],
)

dir_step(
    name = "b_prime",
    outs = [
        "$DIR_ROOT/foo",
    ],
    cmd = "mkdir -p $DIR_ROOT/foo && echo b_prime > $DIR_ROOT/foo/b",
    path = "b",
    deps = [":b"],
)
