load("//:coarse.bzl", "dir_run", "dir_step")
load("//:cargo.bzl", "cargo_build_env", "cargo")

package(default_visibility = ["//visibility:public"])

exports_files(["Cargo.toml"])

dir_step(
    name = "npm_install",
    srcs = [
        "package.json",
        "package-lock.json",
    ],
    cmd = "npm install",
)

dir_step(
    name = "wasm_pack_build",
    srcs = glob([
        "src/**/*",
    ]),
    outs = [
        ".",
        "$CARGO_TARGET_DIR",
    ],
    cmd = "wasm-pack build --out-name index",
    env = cargo_build_env,
    target_compatible_with = [
        "@platforms//cpu:wasm32",
    ],
    deps = [
        "//puddlejumper:build.transitive",
    ],
)

dir_step(
    name = "build",
    srcs = glob([
        "js/**/*",
        "index.html",
        "vite.config.ts",
        "tsconfig.node.json",
        "tsconfig.json",
    ]),
    cmd = "npm run build",
    deps = [
        ":wasm_pack_build",
        ":npm_install",
    ],
)

dir_run(
    name = "run",
    cmd = "npm run start",
    srcs = [
        "launch_editor.sh",
    ],
    deps = [":build"],
)
