load("//:rules_local.bzl", "local_run", "local_step")
load("//:cargo.bzl", "cargo", "cargo_build_env")

package(default_visibility = ["//visibility:public"])

exports_files(["Cargo.toml"])

local_step(
    name = "npm_install",
    srcs = [
        "package.json",
        "package-lock.json",
    ],
    cmd = "npm install",
)

local_step(
    name = "wasm_pack_build",
    srcs = glob([
        "src/**/*",
    ]),
    outs = [
        ".",
        "$CARGO_TARGET_DIR",
    ],
    cmd = "wasm-pack build --out-name index --dev",
    env = cargo_build_env,
    target_compatible_with = [
        "@platforms//cpu:wasm32",
    ],
    deps = [
        "//puddlejumper:build.transitive",
    ],
)

local_step(
    name = "build",
    srcs = glob([
        "js/**/*",
        "index.html",
        "vite.config.ts",
        "tsconfig.node.json",
        "tsconfig.json",
        "launch_editor.sh",
    ]),
    cmd = "npm run build",
    deps = [
        ":npm_install",
        ":wasm_pack_build",
    ],
)

local_run(
    name = "run",
    cmd = "npm run start",
    tags = ["ibazel_notify_changes"],
    deps = [":build"],
)
