load("//:coarse.bzl", "dir", "dir_step", "dir_test")
load("//:cargo.bzl", "cargo_build_env", "cargo_with_tree_sitter_features")

package(default_visibility = ["//visibility:public"])

dir_step(
    name = "build",
    srcs = glob(
        [
            "src/**/*",
            "Cargo.toml",
            "Cargo.lock",
        ],
    ),
    outs = [
        ".",
        "$CARGO_TARGET_DIR",
    ],
    cmd = cargo_with_tree_sitter_features("build"),
    env = cargo_build_env,
    path = "puddlejumper",
    deps = [
        "//tree-sitter-puddlejumper:build",
    ],
)

dir_step(
    name = "test_lib",
    outs = [
        ".",
        "$CARGO_TARGET_DIR",
    ],
    cmd = cargo_with_tree_sitter_features("test --no-run"),
    env = cargo_build_env,
    path = "puddlejumper",
    deps = [":build.transitive"],
)

dir_test(
    name = "test",
    cmd = cargo_with_tree_sitter_features("test"),
    path = "puddlejumper",
    deps = [":test_lib.transitive"],
)
