load("//:rules_local/defs.bzl", "local_step", "local_test")
load("//:cargo.bzl", "cargo_build_env", "cargo_with_tree_sitter_features")

package(default_visibility = ["//visibility:public"])

exports_files([
    "Cargo.toml",
])

local_step(
    name = "build",
    srcs = glob(
        [
            "src/**/*",
        ],
    ),
    outs = [
        ".",
        "$CARGO_TARGET_DIR",
    ],
    cmd = cargo_with_tree_sitter_features("build"),
    env = cargo_build_env,
    deps = [
        "//:cargo_workspace",
        "//tree-sitter-puddlejumper:build",
    ],
)

local_step(
    name = "test_no_run",
    outs = [
        ".",
        "$CARGO_TARGET_DIR",
    ],
    cmd = cargo_with_tree_sitter_features("test --no-run"),
    env = cargo_build_env,
    deps = [":build.transitive"],
)

local_test(
    name = "test",
    cmd = cargo_with_tree_sitter_features("test"),
    env = cargo_build_env,
    deps = [":test_no_run.transitive"],
)
