[package]
name = "puddlejumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tree-sitter = "0.20.10"
tree-sitter-puddlejumper = { version = "0.0.1", path = "../tree-sitter-puddlejumper" }

[build-dependencies]
cc="*"
