load("//:coarse.bzl", "base_dir", "dir_test", "step")
load("//:cargo.bzl", "cargo_build_env", "cargo_with_tree_sitter_features")

package(default_visibility = ["//visibility:public"])

base_dir(
    name = "sources",
    path = "tree-sitter-puddlejumper",
)

step(
    name = "generate",
    srcs = [
        "grammar.js",
        "src/scanner.cc",
    ],
    cmd = "tree-sitter generate",
    dir = ":sources",
    env = cargo_build_env,
)

dir_test(
    name = "test_grammar",
    srcs = glob([
        "test/**/*",
    ]),
    cmd = "tree-sitter test",
    dir = ":generate",
    env_inherit = [
        "NIX_LDFLAGS",
        "NIX_CC_WRAPPER_TARGET_HOST_aarch64_apple_darwin",
    ],
)

step(
    name = "build",
    srcs = glob([
        "Cargo.lock",
        "Cargo.toml",
        "bindings/**/*",
        "binding.gyp",
        "package-lock.json",
        "package.json",
    ]),
    cmd = cargo_with_tree_sitter_features("build"),
    dir = ":generate",
    env = cargo_build_env,
)

dir_test(
    name = "test",
    cmd = cargo_with_tree_sitter_features("test"),
    dir = ":build",
)
