load("//:coarse.bzl", "dir", "dir_test", "dir_step")
load("//:cargo.bzl", "cargo_build_env", "cargo_with_tree_sitter_features")

package(default_visibility = ["//visibility:public"])

dir(
    name = "sources",
    path = "tree-sitter-puddlejumper",
)

dir_step(
    name = "generate",
    srcs = [
        "grammar.js",
        "src/scanner.cc",
    ],
    cmd = "tree-sitter generate",
    env = cargo_build_env,
    prev = ":sources",
)

dir_test(
    name = "test_grammar",
    srcs = glob([
        "test/**/*",
    ]),
    cmd = "tree-sitter test",
    env_inherit = [
        "NIX_LDFLAGS",
        "NIX_CC_WRAPPER_TARGET_HOST_aarch64_apple_darwin",
    ],
    prev = ":generate",
)

dir_step(
    name = "build",
    srcs = glob([
        "Cargo.lock",
        "Cargo.toml",
        "bindings/**/*",
        "binding.gyp",
        "package-lock.json",
        "package.json",
    ]),
    cmd = cargo_with_tree_sitter_features("build"),
    env = cargo_build_env,
    prev = ":generate",
)

dir_test(
    name = "test",
    cmd = cargo_with_tree_sitter_features("test"),
    prev = ":build",
)
