[package]
name = "tree-sitter-puddlejumper"
description = "puddlejumper grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "puddlejumper"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-puddlejumper"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = { version = ">= 0.19, < 0.21", optional = true }
tree-sitter-c2rust = { version = ">= 0.19, < 0.21", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[build-dependencies]
cc = "1.0"

[features]
default = ["native"]
native = ["dep:tree-sitter"]
wasm = ["dep:tree-sitter-c2rust"]