load("//:rules_local.bzl", "local_run", "local_step")

local_step(
    name = "a",
    outs = [
        "$DIR_ROOT/foo",
    ],
    cmd = "mkdir -p $DIR_ROOT/foo && echo a > $DIR_ROOT/foo/a",
    cwd = "a",
)

local_step(
    name = "b",
    outs = [
        "$DIR_ROOT/foo",
    ],
    cmd = "mkdir -p $DIR_ROOT/foo && echo b > $DIR_ROOT/foo/b && echo b > $DIR_ROOT/foo/a",
    cwd = "b",
    deps = [":a"],
)

local_step(
    name = "c",
    outs = [
        "$DIR_ROOT/foo",
    ],
    cmd = "mkdir -p $DIR_ROOT/foo && echo c > $DIR_ROOT/foo/c",
    cwd = "c",
    deps = [
        ":b_prime",
    ] + [
        ":b",
    ],
)

local_step(
    name = "b_prime",
    outs = [
        "$DIR_ROOT/foo",
    ],
    cmd = "mkdir -p $DIR_ROOT/foo && echo b_prime > $DIR_ROOT/foo/b",
    cwd = "b",
    deps = [":b"],
)
